--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <div class="alert alert-primary" role="alert">
+  A simple primary alert—check it out!
+</div>
     <%= yield %>
   </body>
 </html>
