--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 offset-sm-1">
+      <h1>Productos</h1>
+      <div class="text-right">
+        <%= link_to "Crear Producto", new_product_path, class: "btn btn-secondary" %>
+      </div>
+      <table class="table table-dark">
+        <thead>
+          <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Categoria</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @products.each do |product| %>
+          <tr>
+            <td><%= product.name %></td>
+            <td><%= product.price %></td>
+            <td>
+              <% product.categories.each do |category| %>
+              <%= category.name %>
+              <% end %>
+            </td>
+            <td><%= link_to "Editar", edit_product_path(product) %></td>
+            <td><%= link_to "Eliminar", product, method: :delete, data: { confirm: "¿Estás seguro de eliminar este producto?" } %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
